<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginUserActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/paprika"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_welcom"
        android:layout_width="361dp"
        android:layout_height="214dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:srcCompat="@drawable/ilustrasi5"
        android:contentDescription="@string/vektor" />

    <TextView
        android:id="@+id/user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/user_login"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_welcom"
        app:layout_constraintStart_toStartOf="@+id/img_welcom"
        app:layout_constraintTop_toBottomOf="@+id/img_welcom" />

    <com.example.storyapp.main.EmailEditText
        android:id="@+id/edt_email_login"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login" />

    <com.example.storyapp.main.PasswordEditText
        android:id="@+id/edt_password_login"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_email_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login" />

    <Button
        android:id="@+id/button_login"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_password_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

    <TextView
        android:id="@+id/text_donthave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/have_account"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/btn_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/regis"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_donthave"
        app:layout_constraintStart_toStartOf="@+id/text_donthave"
        app:layout_constraintTop_toBottomOf="@+id/text_donthave" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>